<resources>
    <string name="app_name">Feed Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="init_text_animal">Easily schedule and track meals for street animals in need with Feed Finder, ensuring they receive regular nourishment and care.</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="create_account">Create Account</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

</resources>
